<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.editEmployee.EditEmployeeActivity">

    <include
        android:id="@+id/editEmpToolbar"
        layout="@layout/toolbar_main"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLbl"
        app:layout_constraintTop_toBottomOf="@id/editEmpToolbar"
        android:text="Please enter all the details of the \nEmployee you want to add"
        android:fontFamily="@font/poppins"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvLbl"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:maxLength="25"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:paddingEnd="12dp"
        android:paddingVertical="14dp"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:hint="@string/enter_name"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/poppins_medium"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etName"
        android:inputType="number"
        android:maxLength="10"
        android:paddingEnd="12dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:paddingVertical="14dp"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:hint="@string/enter_phone"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/poppins_medium"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPhone"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:paddingEnd="12dp"
        android:paddingVertical="14dp"
        android:paddingLeft="20dp"
        android:maxLength="60"
        android:textColor="@color/black"
        android:hint="@string/enter_email"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/poppins_medium"/>

    <EditText
        android:id="@+id/etDesignation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:paddingVertical="14dp"
        android:paddingLeft="20dp"
        android:paddingEnd="12dp"
        android:maxLength="30"
        android:textColor="@color/black"
        android:hint="@string/enter_designation"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/poppins_medium"/>

    <EditText
        android:id="@+id/etDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etDesignation"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:paddingVertical="14dp"
        android:paddingLeft="20dp"
        android:paddingEnd="12dp"
        android:maxLength="35"
        android:textColor="@color/black"
        android:hint="@string/enter_department"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/poppins_medium"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        app:backgroundTint="@color/light_green"
        android:background="@drawable/bg_status_active"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/text"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:text="Save"
        android:paddingVertical="12dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:indeterminateTint="@color/light_green"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>